--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Bootstrap
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    -->
     <title>jquery server</title>
 </head>
 
 <body>
-    <button id="action-button">Click me to load info!</button>
-    <div id="info"></div>
+    <h1> Play Ground </h1>
+    <button id="action-button">Click me to load ALL info!</button><br><br>
+    <strong>OR</strong><br><br>
+    <label> Choose it </label>
     <input type="text" name="id" id="input">
-    <button id="action-button2">Load info</button>
+    <button id="action-button2">Load it!</button>
+    <div id="info"></div>
 
 
     <script type="text/javascript" src="javascript.js"></script>
