--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     -->
-    <title>jquery server</title>
+    <title>Fooling Around</title>
 </head>
 
 <body>
@@ -19,9 +19,15 @@
     <input type="text" name="id" id="input">
     <button id="action-button2">Load it!</button>
     <div id="info"></div>
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Author</th>
+            </tr>
+        </table>
 
-
-    <script type="text/javascript" src="javascript.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
