added a feature to add data to the table

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
     <strong>OR</strong><br><br>
     <label> Choose it </label>
     <input type="text" name="id" id="input">
-    <button id="action-button2">Load it!</button>
+    <button id="action-button2">Add it!</button>
     <div id="info"></div>
-        <table>
+        <table id="table">
             <tr>
                 <th>ID</th>
                 <th>Title</th>
