Adding posts feature
Added a from to add posts and refresh the table to show the posts after adding
Added the foundation for a form to delete a post by id

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,20 @@
 
 <body>
     <h1> Play Ground </h1>
-    <button id="action-button">Click me to load ALL info!</button><br><br>
-    <strong>OR</strong><br><br>
-    <label> Choose it </label>
-    <input type="text" name="id" id="input">
-    <button id="action-button2">Add it!</button>
+    <h2> Add a post </h2>
+    <div>
+    <label> Title </label>
+    <input type="text" name="title" id="title-text">
+    <label> Author </label>
+    <input type="text" name="author" id="author-text">
+    <button id="add-post">Add</button><br><br>
+    </div>
+    <h2> Delete a post </h2>
+    <div>
+    <label> Post ID </label>
+    <input type="text" name="title" id="delete-text">
+    <button id="delete-post">Delete</button><br><br>
+    </div>
     <div id="info"></div>
         <table id="table">
             <tr>
